--- a/packages/public-client/src/index.html
+++ b/packages/public-client/src/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DiveInnPublic</title>
+  <title>Dive Inn</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Chivo&family=Comforter&family=Economica&family=Fira+Sans&family=Mulish&family=Neonderthaw&family=Oleo+Script&family=Righteous&family=Share+Tech&family=Ubuntu&family=Yellowtail&display=swap" rel="stylesheet">
 </head>
 <body>
   <app-root></app-root>
