--- a/packages/public-client/src/index.html
+++ b/packages/public-client/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Audiowide&family=Chivo&family=Comforter&family=Economica&family=Fira+Sans&family=Mulish&family=Neonderthaw&family=Oleo+Script&family=Righteous&family=Share+Tech&family=Ubuntu&family=Yellowtail&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Audiowide&family=Chivo&family=Comforter&family=Economica&family=Fira+Sans&family=Mulish&family=Neonderthaw&family=Oleo+Script&family=Righteous&family=Share+Tech&family=Ubuntu&family=Yellowtail&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- main app outlet -->
