--- a/packages/public-client/src/index.html
+++ b/packages/public-client/src/index.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Audiowide&family=Chivo&family=Comforter&family=Economica&family=Fira+Sans&family=Mulish&family=Neonderthaw&family=Oleo+Script&family=Righteous&family=Share+Tech&family=Ubuntu&family=Yellowtail&display=swap" rel="stylesheet">
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8l6BJOz7ECE70KYZd14-Jzak8biNpPUE"></script>
 </head>
 <body>
   <!-- main app outlet -->
